# driven

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODEX_NOTES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  codex-err.txt  deny.toml  docker-entrypoint.sh  justfile  release-please-config.json
.github/: dependabot.yml
.sqlx/: query-02157110c16d6110032d50093b1e9e78fec0a0a7b33f6d5f87ff3b6e25da99de.json  query-0407fffc8919287ff83a6d574abcb3320a5ddd4e7c042e9a1e9503a83c16283d.json  query-0670097d87c381247e03df06749a4dcece8d918a6ec26e697685417211453ae7.json  query-0687a8d6ff099daad3927932cb2c8abfb25af10677e992eea1c902ac5dc36052.json  query-079742cb0f06764ad9859be4d85f198668b2d95030466cdec42bfa8a3d5b9024.json  query-08048f3b7b208f504e18ccb78fac1375e44fc90d623c309daba05b5cc57d986e.json  query-0872460cf8560195b48ca3196f1e278695bfe090a8dc9a73ceae1615bafe233a.json  query-103e190046611109c5ba9380cddf19b25edd25973f3094b51e794da3e54d28cd.json  query-11d99889b6b26c68ee47bf707d169bbfd19a9781929ada0df486cce052b3e1c9.json  query-12b44fdd644e6d781cc2641b51d4b0fc64490b8c0e282e7b84758efb2f0401b0.json  query-12cb8338a500850b553f7cf31bcbc705c6d98c7b834e0fe50284e28bbadcda02.json  query-15f86c1ad7ff40a4902159eba280ae9c47b8ea31c5eb295e8e71db48baafc3ae.json  query-16f46641fc8474f8e1bd2833dfb38d5a63ba6d5435011737f9a1aa9b983678eb.json  query-18737fadc25402c4682fbcf06b33c24a4854b3d56b959d502a77ce4043308aea.json  query-18a172b42d7d2f502426cc452fc1fde95cc871d6722b732ddf5fe4ed4347775b.json  query-19bff2eaa991a731693ba648ba8b45725a87d697c15b1e5637f7fb2979cef36e.json  query-1b3fbf854838e44eae49971f6e6d72fe90a5118e85787b04bc4fd4bb1de93554.json  query-1df855985b1af372fa600bc99a40de34478840070c61a7525d446cd9fda7c35f.json  query-1f8d5569c1029f0b8ece3046857cfbcb860e467b2d1f91bbd54abf5e394faa4b.json  query-213c4e22ebdf0a8bc8d8938daa19b2aef938f18a1c240106c8be9cbd784779b8.json  query-22adb903ec7c2d6af12076567bd26320ca11fa5d4bada6430ae9f6d31e9e02d0.json  query-22cc010b437f563a039a7cfc7cbd72f78b671f24e7deda0a1a8b48027258f458.json  query-25f55d4711806cc193eb116d276e1862839e28cae8713f4b1b9cb9469d7dfff4.json  query-2613f6a09eb4fd606f5a9753f9772da2671db46539254c738b8ac779527ba359.json  query-26dea8aa0438d216cabca34d9b0238635acf1d45e9fbe3d013d7fd2f9fae508f.json  query-2a4d096f4c15e5c852ca4a64ba5011a7ca9fbdf9db5c7c2754df6d34eae12629.json  query-2a75d17402950e0ed49f5078e3e2152c1de1ea893ff0b8368143fd76a7d5bb11.json  query-2bdbafdaee89666ca3aab36a2d643e9a7548a7fa9ac000aa91e3124e46a11ddb.json  query-3195ca7d060e43ce8be8651e66bd65239aaede46a6d237390abeda1a119a2d75.json  query-3764f0a8862faf7e929af70115e6aa9a467de64b22b255ec485d7837b44945bf.json  query-3ee78b537c56f2d0b78c5670338f8c4670261b2d18923d637592cd41901dbf48.json  (+88 more)
crates/driven-chaos/: Cargo.toml
crates/driven-chaos/src/: capabilities.rs  dispatch.rs  handle.rs  lib.rs  main.rs  mutator.rs  registry.rs  reporting.rs  runner.rs  scenario.rs
crates/driven-chaos/src/scenarios/: concurrency.rs  drive_side.rs  file_size.rs  filenames.rs  mod.rs  mutation.rs  mutator.rs  ntfs.rs  permissions.rs  reporting.rs  storage.rs
crates/driven-cli/: Cargo.toml
crates/driven-cli/src/: inspect.rs  main.rs
crates/driven-cli/tests/: cli.rs
crates/driven-core/: Cargo.toml
crates/driven-core/src/: adaptive.rs  bundle.rs  crypto_provider.rs  exclude.rs  executor.rs  hooks.rs  lib.rs  network.rs  orchestrator.rs  pacer.rs  planner.rs  scanner.rs  state.rs  telemetry.rs  test_support.rs  time.rs  types.rs  watcher.rs
crates/driven-core/src/migrations/: 0001_initial.sql  0002_seed_settings.sql  0003_checksum_mismatch.sql  0004_recovery_phrase_acks.sql  0005_default_autostart_on.sql  0006_file_versions.sql  0007_bundles.sql  0008_placeholder_policy.sql  0010_shared_drive_id.sql  0011_adaptive_parallelism.sql  0012_mtime_granularity.sql
crates/driven-core/src/state/: mod.rs  sqlite.rs
crates/driven-core/tests/: e2e_fake.rs  m2_scanner_planner.rs
crates/driven-crypto/: Cargo.toml
crates/driven-crypto/src/: content.rs  filename.rs  key.rs  keystore.rs  lib.rs  recovery.rs
crates/driven-diskstat/: Cargo.toml
crates/driven-diskstat/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/driven-drive/: Cargo.toml
crates/driven-drive/src/: lib.rs  remote_store.rs
crates/driven-drive/src/fake/: fault_injection.rs  mod.rs
crates/driven-drive/src/google/: mod.rs  oauth.rs  pagination.rs  resumable.rs  retry.rs  token_store.rs
crates/driven-drive/tests/: fake_contract.rs  google_e2e.rs
crates/driven-drive/tests/common/: mod.rs
crates/driven-net/: Cargo.toml
crates/driven-net/src/: classify.rs  lib.rs  reachability.rs
crates/driven-power/: Cargo.toml
crates/driven-power/src/: lib.rs  linux.rs  macos.rs  network.rs  windows.rs
crates/driven-test-fixtures/: Cargo.toml
crates/driven-test-fixtures/src/: assert.rs  clock.rs  diskstat.rs  lib.rs  network.rs  power.rs  tree.rs
crates/driven-tls/: Cargo.toml
crates/driven-tls/src/: lib.rs  proxy.rs
crates/driven-vss/: Cargo.toml
crates/driven-vss-helper/: Cargo.toml
crates/driven-vss-helper/src/: auth.rs  client.rs  launch.rs  lib.rs  protocol.rs  provider.rs  server.rs  validate.rs
crates/driven-vss-helper/tests/: helper_integration.rs
crates/driven-vss/src/: lib.rs  mode.rs  orphan.rs  provider.rs  stub.rs  windows_vss.rs
design/: BLOCKERS.md  CODEX_NOTES.md  (+8 more)
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.helper.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en-US.yml
src-tauri/src/: app_state.rs  assembly.rs  crypto_provider_impl.rs  elevation.rs  events.rs  hook_runner.rs  i18n.rs  lib.rs  main.rs  migrations.rs  panic_hook.rs  telemetry.rs  tray.rs  updater.rs  vss_helper.rs
src-tauri/src/commands/: accounts.rs  activity.rs  dialogs.rs  dtos.rs  mod.rs  restore.rs  settings.rs  sources.rs  sync.rs
src-tauri/tests/: ipc_path_validation.rs  release_signature_smoke.rs
src-tauri/tests/fixtures/updater/: fixture.bin.sig
(+113 files in other folders)
