[workspace]
resolver = "2"
members = [
    "crates/driven-core",
    "crates/driven-drive",
    "crates/driven-crypto",
    "crates/driven-power",
    "crates/driven-vss",
    "crates/driven-net",
    "crates/driven-cli",
    "crates/driven-test-fixtures",
    "crates/driven-chaos",
    "src-tauri",
]
# M9b (SPEC s16): the telemetry Cloudflare Worker has its own (TypeScript/wrangler)
# toolchain and is NOT a cargo crate - keep it out of the workspace so a stray
# manifest there could never be pulled into `cargo build --workspace`.
exclude = [
    "telemetry-worker",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
authors = ["Driven contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pmaxhogan/driven"
homepage = "https://driven.maxhogan.dev"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
parking_lot = "0.12"
# M3 CPU-bound work: parallel hashing + encryption off the tokio reactor
# (DESIGN s11.4.4, s11.4.5). Consumed by driven-core's executor impl and
# the deep-verify pass.
rayon = "1.10"
# M3 filesystem watcher backend (inotify / FSEvents / ReadDirectoryChangesW,
# DESIGN s5.9.1). Wired into the watcher impl crate; driven-core stays
# I/O-free and holds only the trait surface.
notify = "8"
# M3 network-resilience layer (DESIGN s5.8): the HTTP client for the
# three-probe topology + Drive traffic. `rustls-tls-native-roots` (NOT the bare
# `rustls-tls`, which bundles the webpki-roots Mozilla set) pulls
# `rustls-native-certs` so we trust the OS / enterprise trust store - corporate
# private CAs work behind a TLS-inspecting proxy (DESIGN s5.8.7, codex R-P2-2).
# The DNS re-resolution probe (DESIGN s5.8.1) uses `tokio::net::lookup_host`,
# not a resolver crate; `hickory-resolver` was the optional s5.8.5 escalation
# and is not wired in V1 (dropped to clear RUSTSEC-2026-0119 in hickory-proto's
# name compression).
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots",
    "http2",
    "stream",
] }
# M3 encryption (DESIGN s7): XChaCha20-Poly1305 STREAM for content +
# single-shot for filenames; BIP39 recovery phrase over the master key;
# base32hex filename encoding; zeroize to scrub key material.
chacha20poly1305 = { version = "0.10", features = ["stream"] }
bip39 = "2"
base32 = "0.5"
zeroize = { version = "1", features = ["derive"] }
# Drive's `md5Checksum` is the ciphertext MD5 (DESIGN s7.1). The crypto
# content encryptor and the executor's plaintext-path hasher both compute it
# (the RustCrypto `md-5` crate, imported as `md_5`).
md5 = { version = "0.10", package = "md-5" }
# M4 Google OAuth (SPEC s4): PKCE loopback installed-app flow. oauth2 v5
# declares its `reqwest` dep with default-features=false and gates TLS behind
# its own feature flags, so `default-features=false` + the `reqwest` +
# `rustls-tls` features bring in reqwest 0.12 with rustls ONLY - it never
# pulls native-tls/openssl (SPEC s4: bring-your-own reqwest client, no
# native-tls). The flow hands oauth2 our own redirect-disabled
# `reqwest::Client` (SSRF defence per SPEC s4 / the oauth2 v5 upgrade notes).
oauth2 = { version = "5", default-features = false, features = [
    "reqwest",
    "rustls-tls",
] }
# M4 OS keychain (SPEC s4.1): refresh tokens persist in the keychain only.
# Promoted from driven-crypto's direct dep to a workspace dep so both crates
# share one version; keyring 4.x's default `v1` feature bundles the per-OS
# native stores.
keyring = "4"
# M4 URL building for the Drive REST endpoints + the loopback redirect URI
# (SPEC s4).
url = "2"
# M4 base64url for PKCE / token plumbing and any binary-in-JSON Drive fields.
base64 = "0.22"
# M4 CLI surface (ROADMAP M4 acceptance: `cargo run --bin driven-cli auth`).
# `derive` for the `#[derive(Parser)]` command tree.
clap = { version = "4", features = ["derive", "env"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
