[package]
name = "driven-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Driven Tauri shell: tray, IPC commands, updater glue, plugin wiring"
publish = false

[lib]
name = "driven_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
# M5 plugins (SPEC s13, s14): single-instance MUST be registered first so
# deep-link can hook its second-launch callback; autostart for login start.
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
# M5 app-shell async runtime (orchestrator run-loop spawn, build_and_spawn).
tokio.workspace = true
rust-i18n = "3"
sys-locale = "0.3"

driven-core = { path = "../crates/driven-core" }
driven-drive = { path = "../crates/driven-drive" }
driven-crypto = { path = "../crates/driven-crypto" }
driven-power = { path = "../crates/driven-power" }
# M5 assembly seams: real network breaker backend + Windows VSS provider.
driven-net = { path = "../crates/driven-net" }
driven-vss = { path = "../crates/driven-vss" }

[dev-dependencies]
# R-P1-1 shutdown test: a no-op `Orchestrator` impl to build an `AccountHandle`
# and assert every per-account task is joined after `shutdown()`.
async-trait.workspace = true
# R2-P2-1 run-loop drain-budget test: `tokio::time::pause` for virtual time so
# the long in-flight drain is instant (test-util is NOT part of tokio `full`).
tokio = { workspace = true, features = ["test-util"] }
