[package]
name = "driven-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Driven Tauri shell: tray, IPC commands, updater glue, plugin wiring"
publish = false

[lib]
name = "driven_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
# M5 plugins (SPEC s13, s14): single-instance MUST be registered first so
# deep-link can hook its second-launch callback; autostart for login start.
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
# M6 (SPEC s11.6.1): native folder + file dialogs so add-source / restore /
# diagnostic-export round-trip a dialog-derived path (the webview never injects
# a raw local path).
tauri-plugin-dialog = "2"
# M9a (SPEC s15): the in-app updater. `tauri-plugin-updater` fetches the signed
# per-target `update.json` manifest + bundle and verifies the ed25519 signature
# against the pubkey in tauri.conf.json; `tauri-plugin-process` provides the
# relaunch (`app.restart()`) after an update is staged.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# M6 (SPEC s11.6.1): Windows-friendly canonicalisation (no \\?\ UNC prefix) for
# validate_writable_dest path confinement.
dunce = "1"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
# M5 app-shell async runtime (orchestrator run-loop spawn, build_and_spawn).
tokio.workspace = true
# R3-P1-1: drain every per-account shutdown future CONCURRENTLY on quit
# (futures::future::join_all) so two slow accounts do not serialise and risk an
# outer-timeout abort mid-drain (which would orphan a task).
futures.workspace = true
rust-i18n = "4"
sys-locale = "0.3"
# M6 (SPEC s11.1): the accounts wizard mints opaque server-side session ids.
uuid.workspace = true
# M6 (SPEC s11.6 / s15): check_for_updates + list_releases query the GitHub
# releases API over the shared workspace reqwest (rustls, no `json` feature -
# bodies are read as text + parsed with serde_json). semver compares the latest
# release tag against the current version for the channel.
reqwest.workspace = true
semver = "1"
# M6 (SPEC s18): export_diagnostic_bundle writes a STORED (no-compression) ZIP by
# hand; crc32fast computes the per-entry CRC32 the ZIP format requires.
crc32fast = "1"
# M8 (SPEC s11.5): the restore sink hashes the restored plaintext with BLAKE3 and
# verifies it against the stored `file_state.hash_blake3` (data-safety: a wrong
# decrypt / corrupted object is refused). Same crate the executor hashes with.
blake3 = "1"
# M9b (SPEC s16): the telemetry-send seam (`TelemetrySink`) is an async trait used
# in NON-test code (the periodic ping task takes `&dyn TelemetrySink`), so
# async-trait must be a regular dependency, not just a dev-dependency.
async-trait.workspace = true
# M9b (SPEC s16 / P2-1): a COARSE OS version for the telemetry payload (e.g.
# "11.26200", "14.5"). os_info is a small, cross-platform crate (MIT) that reads
# the OS version without a host shell-out. PRIVACY: only the low-cardinality
# version string is used - never a hostname/path/PII. default-features off drops
# the optional `log` dependency (we do not need its internal logging).
os_info = { version = "3", default-features = false }

driven-core = { path = "../crates/driven-core" }
driven-drive = { path = "../crates/driven-drive" }
driven-crypto = { path = "../crates/driven-crypto" }
driven-power = { path = "../crates/driven-power" }
# M5 assembly seams: real network breaker backend + Windows VSS provider.
driven-net = { path = "../crates/driven-net" }
driven-vss = { path = "../crates/driven-vss" }

# R2-P1-1 (SPEC s11.6.1): handle-based restore confinement on Unix. The restore
# sink opens a verified no-follow parent-directory fd and does BOTH the temp
# create (`openat`) and the final move (`renameat`) RELATIVE to that fd, so a
# concurrent parent-component swap to a symlink cannot redirect the decrypted
# plaintext outside the dialog-approved root. Unix-only (the Windows path uses
# CreateFileW + SetFileInformationByHandle FILE_RENAME_INFO), so the 3-OS CI
# build/clippy stays green without rustix on Windows.
[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

# R1-P2-2 / R2-P1-1 (SPEC s11.6.1 step 5): atomic restore-over-existing + handle-
# based confinement on Windows. The restore sink opens a verified no-follow parent
# directory handle (`CreateFileW` with BACKUP_SEMANTICS | OPEN_REPARSE_POINT,
# rejecting a reparse point + re-confirming the resolved path is in-root via
# `GetFinalPathNameByHandleW`) and renames the temp HANDLE-RELATIVE to it via
# `SetFileInformationByHandle(FileRenameInfo { RootDirectory, ReplaceIfExists })`,
# so a concurrent parent swap cannot escape the root and an existing dest is
# atomically replaced. Windows-only so the 3-OS CI build/clippy stays green on
# Linux + macOS.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    # `CreateFileW` (and the other handle-open APIs) take a `SECURITY_ATTRIBUTES`
    # pointer and are gated behind `Win32_Security` in windows-sys 0.59.
    "Win32_Security",
] }

[dev-dependencies]
# (async-trait is a regular dependency - see [dependencies] - used by both the
# M9b telemetry-send seam and the R-P1-1 shutdown test's no-op Orchestrator impl.)
# M8-P1-1 restore-cancel test: seed an InMemoryRemoteStore object via UploadBody::Bytes.
bytes.workspace = true
# R2-P2-1 run-loop drain-budget test: `tokio::time::pause` for virtual time so
# the long in-flight drain is instant (test-util is NOT part of tokio `full`).
tokio = { workspace = true, features = ["test-util"] }
# R5-P1-4 updater-signature smoke (tests/release_signature_smoke.rs): verifies a
# committed fixture + .sig against the tauri.conf.json `pubkey` using the SAME
# decode path tauri-plugin-updater 2.10.1 `verify_signature` uses (base64-decode
# the config pubkey -> minisign `PublicKey::decode`; base64-decode the .sig ->
# `Signature::decode`; `verify(.., allow_legacy = true)`). Both crates are
# ALREADY in the dependency graph transitively via tauri-plugin-updater (pinned
# minisign-verify 0.2.5) and base64 is the workspace dep, so this adds NO new
# crate to the tree (deny check unaffected); declaring them dev-deps just lets
# the smoke call the exact same API. VERIFY needs no private key, so CI runs this
# every build with only the committed pubkey + fixture + sig.
minisign-verify = "0.2.5"
base64.workspace = true
