[package]
name = "driven-chaos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Driven stress / chaos harness; see design/STRESS_HARNESS.md"
publish = false

[[bin]]
name = "driven-chaos"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
