[package]
name = "driven-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Driven sync engine: scanner, planner, orchestrator, pacer, scheduler"
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
uuid.workspace = true
hex.workspace = true
unicode-normalization = "0.1"
# M2 scanner: gitignore-aware tree walk (the one crate the research
# confirmed - DESIGN s16). Pulls walkdir transitively.
ignore = "0.4.26"
# M2 deep-verify re-hash to catch bit-rot (DESIGN s3.3 / ROADMAP M2).
blake3 = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "macros",
    "migrate",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
