[package]
name = "driven-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Driven sync engine: scanner, planner, orchestrator, pacer, scheduler"
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
uuid.workspace = true
hex.workspace = true
unicode-normalization = "0.1"
# M2 scanner: gitignore-aware tree walk (the one crate the research
# confirmed - DESIGN s16). Pulls walkdir transitively.
ignore = "0.4.26"
# M2 deep-verify re-hash to catch bit-rot (DESIGN s3.3 / ROADMAP M2).
blake3 = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "macros",
    "migrate",
] }
# M3 seams the orchestrator + executor code against. The dependency graph
# stays one-way (driven-core -> these; never the reverse): driven-drive,
# driven-crypto, and driven-power carry no driven-core dep, so adding them
# here is acyclic. The executor holds the RemoteStore + SourceCryptoSuite
# seams; the orchestrator holds the PowerSource seam (SPEC s5).
driven-drive = { path = "../driven-drive" }
driven-crypto = { path = "../driven-crypto" }
driven-power = { path = "../driven-power" }
# M3 CPU-bound hashing + encryption off the tokio reactor (DESIGN s11.4.4,
# s11.4.5). Used by the executor impl in the M3 implement phase.
rayon.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
# M2 acceptance snapshots: the tree!() temp-tree builder (DESIGN s16,
# ROADMAP M2). Scanner + planner are remote-free, so the InMemoryRemoteStore
# in driven-drive is NOT needed here (no remote is consumed until M3
# execution); only the fixtures crate is pulled in.
driven-test-fixtures = { path = "../driven-test-fixtures" }
