[package]
name = "driven-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Driven sync engine: scanner, planner, orchestrator, pacer, scheduler"
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
# M3 streaming upload pipeline (DESIGN s11.4.3): ReceiverStream adapts the
# cpu stage's bounded mpsc output into the `UploadBody::Stream` for the
# 4-5 MiB simple band.
tokio-stream = "0.1"
uuid.workspace = true
hex.workspace = true
unicode-normalization = "0.1"
# M2 scanner: gitignore-aware tree walk (the one crate the research
# confirmed - DESIGN s16). Pulls walkdir transitively.
ignore = "0.4.26"
# M2 deep-verify re-hash to catch bit-rot (DESIGN s3.3 / ROADMAP M2).
# The `rayon` feature enables `Hasher::update_rayon` for multi-core hashing
# of large files in the M3 streaming upload pipeline (DESIGN s11.4.4).
blake3 = { version = "1", features = ["rayon"] }
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "macros",
    "migrate",
] }
# M3 seams the orchestrator + executor code against. The dependency graph
# stays one-way (driven-core -> these; never the reverse): driven-drive,
# driven-crypto, and driven-power carry no driven-core dep, so adding them
# here is acyclic. The executor holds the RemoteStore + SourceCryptoSuite
# seams; the orchestrator holds the PowerSource seam (SPEC s5).
driven-drive = { path = "../driven-drive" }
driven-crypto = { path = "../driven-crypto" }
driven-power = { path = "../driven-power" }
# Per-OS disk-busy reader for the adaptive upload-parallelism controller
# (DESIGN s11.4.7 / s18.2). Same acyclic shape as driven-power: it carries no
# driven-core dep.
driven-diskstat = { path = "../driven-diskstat" }
# M3.5 Windows VSS reads for exclusively-locked files (ROADMAP M3.5, DESIGN
# s5.3). The executor consults the `VssProvider` seam on its open path; the
# orchestrator owns the per-cycle snapshot lifecycle + orphan cleanup. The
# crate is a no-op off Windows / un-elevated, so driven-core's degrade path is
# unchanged there. Acyclic: driven-vss carries no driven-core dep.
driven-vss = { path = "../driven-vss" }
# M3 CPU-bound hashing + encryption off the tokio reactor (DESIGN s11.4.4,
# s11.4.5). Used by the executor impl in the M3 implement phase.
rayon.workspace = true
# M3 filesystem watcher backend (inotify / FSEvents / ReadDirectoryChangesW,
# DESIGN s5.9.1). Wired into the watcher impl; driven-core holds the concrete
# backend here because the OS event source lives with the orchestrator wiring.
notify.workspace = true
# Drive's `md5Checksum` is the ciphertext MD5 (DESIGN s7.1); the executor's
# plaintext upload path also hashes with MD5. Aliased to `md5` to match the
# `use md5::{Digest, Md5}` call site.
md5 = { workspace = true }
# V2 small-file bundling (issue #35): the executor packs cold folders of many
# tiny NEW files into one `.tar.gz` Drive object; the restore path (via
# `driven_core::bundle`) extracts a single member back out. `tar` + `flate2`
# (pure-Rust gzip backend) build/read the archive in a bounded spawn_blocking
# task (bundles are size-capped, so the whole archive fits in memory).
tar = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
# `test-util` enables `#[tokio::test(start_paused = true)]` so the orchestrator
# run-loop scheduled-tick test drives `tokio::time::interval` on virtual time
# (no wall-clock wait) - see orchestrator.rs run_loop_scheduled_tick_runs_a_cycle.
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tempfile = "3"
# M2 acceptance snapshots: the tree!() temp-tree builder (DESIGN s16,
# ROADMAP M2). Scanner + planner are remote-free, so the InMemoryRemoteStore
# in driven-drive is NOT needed here (no remote is consumed until M3
# execution); only the fixtures crate is pulled in.
driven-test-fixtures = { path = "../driven-test-fixtures" }
