[package]
name = "driven-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Driven authenticated-encryption format (XChaCha20-Poly1305 STREAM, filename encryption)"
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
# M3 crypto implementation (DESIGN s7): XChaCha20-Poly1305 STREAM content
# encryption + single-shot filename encryption, BIP39 recovery phrase,
# base32hex filename encoding, BLAKE3-derived filename sub-keys, and
# zeroize to scrub key material. The seam traits in lib.rs reference none
# of these (only `bytes`/`&str`/`[u8;16]`); the impl phase fills them in.
chacha20poly1305 = { workspace = true }
bip39 = { workspace = true }
base32 = { workspace = true }
zeroize = { workspace = true }
blake3 = "1"
# OS keychain storage for the account master key (DESIGN s7.1). keyring 4.x's
# default `v1` feature bundles the per-OS native stores (macOS Keychain,
# Windows Credential Manager, Linux Secret Service) and lazily installs the
# right one on first `Entry::new`; without it the crate has no default store
# and every op errors.
keyring = { workspace = true }
# Drive's `md5Checksum` is the ciphertext MD5 (DESIGN s7.1), so the content
# encryptor hashes every emitted ciphertext byte (header + chunks) with MD5
# for the verify-on-upload comparison.
md5 = { workspace = true }
# `getrandom`-backed RNG for the per-file STREAM nonce, the wrapped-key
# nonce, and fresh master / per-source key material (DESIGN s7.1).
# `chacha20poly1305` 0.10 pulls in `aead` 0.5's own `rand_core` 0.6 `OsRng`
# internally, but this crate never calls an `aead`/`chacha20poly1305` API
# that accepts a caller-supplied RNG (no `encrypt_in_place_with_rng` /
# `KeyInit::generate_key`) - every call site here fills a raw byte buffer
# directly via `RngCore`/`TryRngCore`, so the two `rand_core` major versions
# never need to match.
rand = "0.10"
